--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -2,11 +2,7 @@
 # note: touch ~/.hushlogin to remove login message
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin:$HOME/workspaces/python-projects.workspace
-
-# deno
 export PATH="/Users/nom/.deno/bin:$PATH"
-
-# hello
 
 setopt autocd # cd without typing cd
 autoload -Uz add-zsh-hook
@@ -27,6 +23,7 @@ source ~/.zsh/fzf-browser.zsh
 source ~/.zsh/prompt-middle.zsh
 source ~/.zsh/imagemagick.zsh
 source ~/.zsh/exa.zsh
+source ~/.zsh/yazi.zsh
 source ~/.env
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
@@ -34,6 +31,29 @@ export SKIM_DEFAULT_OPTIONS=$FZF_DEFAULT_OPTS
 export SKIM_DEFAULT_COMMAND="fd . --max-depth=3"
 
 export HOMEBREW_NO_ENV_HINTS
+
+function webm_to_webp() {
+  local input_file="$1"
+  local output_file="$2"
+  local duration="$3"
+
+  if [[ -z "$input_file" || -z "$output_file" || -z "$duration" ]]; then
+    echo "Usage: webm_to_webp <input_file> <output_file> <duration_in_seconds>"
+    return 1
+  fi
+
+  ffmpeg -i "$input_file" -t "$duration" -vcodec libwebp -lossless 0 -compression_level 6 -q:v 50 -loop 0 -preset picture -an -vsync 0 "$output_file"
+}
+
+function vlc-find() {
+  local search_term="$1"
+	fd -0 -i "$search_term" -E '.*\.(mp4|webp|webm|mkv|mov)$' | xargs -0 -I{} vlc '{}' --loop --random --no-repeat
+}
+
+function iina-find() {
+  local search_term="$1"
+  fd -0 -i "$search_term" -E '.*\.(mp4|webp|webm|mkv|mov)$' | xargs -0 -I{} open -a IINA '{}' --args --mpv-repeat=inf
+}
 
 # block cursor (5=bar)
 # echo '\e[1 q'
@@ -98,6 +118,8 @@ alias e-fzf="fzf_edit"
 alias j=joshuto
 alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
+alias yt-avc="yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' --merge-output-format mp4 "
+alias yt-audio="yt-dlp -f 'bestaudio' --extract-audio"
 alias htop="btm" # I always forget which monitor I have installed
 alias bottom="btm"
 alias ai="openai-prompt.py"
@@ -245,7 +267,8 @@ function cd-up() {
 
 # KEYBINDINGS
 #
-bindkey '^ ' lfcd;
+# bindkey '^ ' lfcd;
+#bindkey '^ ' yy;
 # bindkey '^ ' joshuto-wrapper;
 bindkey '^f' fzf-cd
 bindkey '^k' clear-reset
