--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -120,6 +120,7 @@ alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
 alias yt-avc="yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' --merge-output-format mp4 "
 alias yt-audio="yt-dlp -f 'bestaudio' --extract-audio"
+alias yt-best="yt-dlp --cookies-from-browser=brave -f 'bestvideo+bestaudio' --merge-output-format mp4 "
 alias htop="btm" # I always forget which monitor I have installed
 alias bottom="btm"
 alias ai="openai-prompt.py"
