--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -32,7 +32,7 @@ export SKIM_DEFAULT_COMMAND="fd . --max-depth=3"
 
 export HOMEBREW_NO_ENV_HINTS
 
-function webm_to_webp() {
+function ffmpeg-convert-to-switch-webp() {
   local input_file="$1"
   local output_file="$2"
   local duration="$3"
@@ -42,7 +42,8 @@ function webm_to_webp() {
     return 1
   fi
 
-  ffmpeg -i "$input_file" -t "$duration" -vcodec libwebp -lossless 0 -compression_level 6 -q:v 50 -loop 0 -preset picture -an -vsync 0 "$output_file"
+	ffmpeg -i "$input_file" -t "$duration" -vcodec libwebp -lossless 0 -compression_level 6 -q:v 50 -loop 0 -preset picture -an -vsync 0 "$output_file"
+  # ffmpeg -i "$input_file" -t "$duration" -vf "scale=1280:720:force_original_aspect_ratio=decrease,pad=1280:720:(ow-iw)/2:(oh-ih)/2" -vcodec libwebp -compression_level 6 -q:v 80 -loop 0 "$output_file"
 }
 
 function vlc-find() {
@@ -118,12 +119,84 @@ alias e-fzf="fzf_edit"
 alias j=joshuto
 alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
-alias yt-avc="yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' --merge-output-format mp4 "
-alias yt-audio="yt-dlp -f 'bestaudio' --extract-audio"
-alias htop="btm" # I always forget which monitor I have installed
-alias bottom="btm"
-alias ai="openai-prompt.py"
+alias yt-avc="yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' --cookies-from-browser=brave --merge-output-format mp4 --embed-metadata "
+alias yt-audio="yt-dlp -f 'bestaudio' --extract-audio --embed-metadata "
+alias yt-video="yt-dlp -f 'bestvideo[vcodec^=avc1]' --merge-output-format mp4 --cookies-from-browser=brave --embed-metadata "
+alias top="btm" # I always forget which monitor I have installed
+alias monitor="btm"
 
+# yt-dlp
+function yt-avc-format-filename() {
+  yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' \
+    --cookies-from-browser brave \
+    --merge-output-format mp4 \
+    -o '[%(uploader)s] %(title)s.%(ext)s' \
+    --embed-metadata \
+    --exec "ffmpeg -i {} -metadata comment='https://youtube.com/watch?v=%(id)s' -codec copy {}_tagged.%(ext)s" \
+    "$@"
+}
+
+function yt-avc-format-filename-ex() {
+  yt-dlp -f 'bestvideo[vcodec^=avc1]+bestaudio[acodec^=aac]/bestvideo[vcodec^=avc1]+bestaudio/best' \
+    --cookies-from-browser brave \
+    --merge-output-format mp4 \
+    -o '[%(uploader)s] %(title)s.%(ext)s' \
+    --embed-metadata \
+    --postprocessor-args "ffmpeg:-metadata comment='https://youtube.com/watch?v=%(id)s' -codec copy" \
+    "$@"
+}
+alias yt-porn=yt-avc-format-filename-ex
+
+function rename-ext() {
+    local old_ext=$1
+    local new_ext=$2
+
+    # Check for the correct number of arguments
+    if (( $# != 2 )); then
+        echo "Usage: rename-ext <old_ext> <new_ext>"
+        return 1
+    fi
+
+    # Loop over all files with the old extension in the current directory
+    for file in *.$old_ext; do
+        if [[ -f "$file" ]]; then
+            local base_name="${file%.*}"
+            mv "$file" "$base_name.$new_ext"
+        fi
+    done
+}
+
+# Example usage: rename-ext mov mp4
+
+function convert_mp4_to_switch_webp() {
+    local input_dir=$1
+    local output_dir=$2
+
+    # Check if input and output directories are provided
+    if [[ -z "$input_dir" || -z "$output_dir" ]]; then
+        echo "Usage: convert_mp4_to_animated_webp <input_directory> <output_directory>"
+        return 1
+    fi
+
+    # Create the output directory if it doesn't exist
+    mkdir -p "$output_dir"
+
+    # Convert all MP4 files in the input directory to animated WEBP
+    for f in "$input_dir"/*.mp4; do
+        local base_name=$(basename "$f" .mp4)
+        ffmpeg -i "$f" \
+               -vf "scale=1280:800,setsar=1" \
+               -loop 0 \
+               -c:v libwebp \
+               -preset picture \
+               -an \
+               -compression_level 6 \
+               -q:v 75 \
+               "$output_dir/$base_name.webp"
+        echo "Converted $f to $output_dir/$base_name.webp"
+    done
+    echo "All files have been converted."
+}
 alias iina-shuffle="iina --mpv-shuffle --mpv-loop-playlist"
 
 # images
