--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -148,6 +148,55 @@ function yt-avc-format-filename-ex() {
 }
 alias yt-porn=yt-avc-format-filename-ex
 
+function yt-print-filename() {
+    local video_url="$1"
+
+    # Check if the URL argument is provided
+    if [[ -z "$video_url" ]]; then
+        echo "Usage: print_ytdlp_filename <video_url>"
+        return 1
+    fi
+
+    # yt-dlp command to get the filename
+    yt-dlp --get-filename \
+			    --output '[%(uploader)s] %(title)s.%(ext)s' \
+					"$video_url"
+}
+
+function rsync-one-way-backup() {
+  local source="$1"
+  local destination="$2"
+
+  if [[ -d "$source" && -d "$destination" ]]; then
+    rsync --archive --verbose --delete --ignore-existing "$source/" "$destination/"
+  else
+    echo "Usage: rsync-one-way-backup <source> <destination>"
+  fi
+}
+
+function rsync-one-way-backup-dry-run() {
+  local source="$1"
+  local destination="$2"
+
+  if [[ -d "$source" && -d "$destination" ]]; then
+    echo "Performing dry run to show changes..."
+    rsync --archive --verbose --checksum --delete --dry-run --itemize-changes "$source/" "$destination/"
+
+    echo "Review the above changes. Files marked with 'deleting' are to be deleted."
+    read "response?Do you want to proceed with these changes? (y/n): "
+    if [[ "$response" =~ ^[Yy]$ ]]; then
+			rsync --archive --verbose --checksum --delete --ignore-existing "$source/" "$destination/"
+      echo "Changes applied."
+    else
+      echo "Operation cancelled."
+    fi
+  else
+    echo "Usage: rsync-one-way-backup-dry-run <source> <destination>"
+  fi
+}
+
+alias backup-babyblue="rsync-one-way-backup-dry-run /Volumes/BabyBlue2TB/ /Volumes/FireBird1TB/_backup/BabyBlue2TB/"
+
 function rename-ext() {
     local old_ext=$1
     local new_ext=$2
