--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,6 +20,8 @@ map alt+k neighboring_window up
 map alt+h neighboring_window left
 map alt+l neighboring_window right
 
+map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd')
+
 # map cmd+j goto_tab_below
 # map cmd+k goto_tab_above
 # map cmd+h goto_tab_left
