--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -33,10 +33,10 @@
 fs=yes
 
 # force starting with centered window
-#geometry=50%:50%
+geometry=50%:50%
 
 # don't allow a new window to have a size larger than 90% of the screen size
-#autofit-larger=90%x90%
+autofit-larger=90%x90%
 
 # Do not close the window on exit.
 #keep-open=yes
@@ -44,7 +44,7 @@ fs=yes
 # Do not wait with showing the video window until it has loaded. (This will
 # resize the window once video is loaded. Also always shows a window with
 # audio.)
-#force-window=immediate
+force-window=immediate
 
 # Disable the On Screen Controller (OSC).
 #osc=no
@@ -96,7 +96,7 @@ hwdec=auto
 # cache settings
 #
 # Use a large seekable RAM cache even for local input.
-#cache=yes
+cache=yes
 #
 # Use extra large RAM cache (needs cache=yes to make it useful).
 #demuxer-max-bytes=500M
