--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -2,10 +2,10 @@
 R playlist-shuffle
 
 # Skip to the next clip with space bar
-SPACE playlist-next
+# ENTER playlist-next
 
 # Skip to the next clip with right arrow key
-RIGHT playlist-next
+Shift+RIGHT playlist-next
 
 # Skip to the previous clip with left arrow key
-LEFT playlist-prev
+Shift+LEFT playlist-prev
