--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,11 +1,23 @@
+# https://github.com/mpv-player/mpv/blob/master/etc/input.conf
+
 # Shuffle the playlist when pressing R
 R playlist-shuffle
 
 # Skip to the next clip with space bar
-# ENTER playlist-next
+ENTER playlist-next
 
 # Skip to the next clip with right arrow key
 Shift+RIGHT playlist-next
+Meta+RIGHT playlist-next
 
 # Skip to the previous clip with left arrow key
 Shift+LEFT playlist-prev
+Meta+LEFT playlist-prev
+
+# Reveal the currently playing file in finder
+Meta+r script_binding reveal_in_finder
+Meta+ENTER script_binding reveal_in_finder
+Ctrl+f script_binding reveal_in_finder
+
+# Open parent dir in kitty and launch lf
+Ctrl+k script_binding open_in_kitty
