--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -25,12 +25,16 @@
 # Profiles should be placed at the bottom of the configuration file to ensure
 # that settings wanted as defaults are not restricted to specific profiles.
 
+loop-playlist=inf
+# fullscreen
+fs=yes
+
 ##################
 # video settings #
 ##################
 
-# Start in fullscreen mode by default.
-fs=yes
+# Enable Vapoursynth
+#vf=vapoursynth="~~/scripts/svp.vpy"
 
 # force starting with centered window
 geometry=50%:50%
