--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -2,6 +2,7 @@
 
 # Shuffle the playlist when pressing R
 R playlist-shuffle
+r playlist-shuffle
 
 # Skip to the next clip with space bar
 ENTER playlist-next
