--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -29,6 +29,11 @@ loop-playlist=inf
 # fullscreen
 fs=yes
 
+hdr-compute-peak=yes
+target-trc=auto
+vf=format=colorlevels=full:colormatrix=auto
+video-output-levels=full
+
 ##################
 # video settings #
 ##################
