--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -4,6 +4,8 @@
 R playlist-shuffle
 r playlist-shuffle
 
+Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
+
 # Skip to the next clip with space bar
 ENTER playlist-next
 
