--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -22,5 +22,7 @@ Meta+r script_binding reveal_in_finder
 Meta+ENTER script_binding reveal_in_finder
 Ctrl+f script_binding reveal_in_finder
 
+Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
+
 # Open parent dir in kitty and launch lf
 Ctrl+k script_binding open_in_kitty
