--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -43,7 +43,7 @@ map cmd+shift+g			show_last_command_output
 # FONTS
 # run: `kitty list-fonts`
 #
-font_family      Monaco Nerd Font Mono
+font_family      JetBrains Mono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
