--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,6 +3,7 @@
 #
 # KEYBINDINGS
 #
+#: Tabs
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -14,6 +15,10 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
+map cmd+enter launch --cwd=current open --reveal .
+map ctrl+cmd+] move_tab_forward
+map ctrl+cmd+[ move_tab_backward
+map cmd+w close_window
 
 map alt+j neighboring_window down
 map alt+k neighboring_window up
@@ -27,10 +32,13 @@ map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd')
 # map cmd+h goto_tab_left
 # map cmd+l goto_tab_right
 
+#: Toggle fullscreen
+map super+f toggle_fullscreen
+
 map cmd+n						new_os_window_with_cmd
 map cmd+t						new_tab
 map cmd+shift+t			new_tab_with_cwd
-map cmd+enter       new_window_with_cwd
+map cmd+shift+j       new_window_with_cwd
 map cmd+shift+g			show_last_command_output
 #map cmd+shift+n launch --cwd=current
 
@@ -1596,7 +1604,6 @@ macos_show_window_title_in none
 #: Close tab
 
 # map kitty_mod+q close_tab
-map cmd+w close_window
 
 #: Close OS window
 
@@ -1604,8 +1611,6 @@ map cmd+w close_window
 
 #: Move tab forward
 
-map cmd+] move_tab_forward
-map cmd+[ move_tab_backward
 
 #: Move tab backward
 
@@ -1615,7 +1620,7 @@ map cmd+[ move_tab_backward
 
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
-map cmd+r set_tab_title
+map cmd+R set_tab_title
 
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
@@ -1760,9 +1765,6 @@ map cmd+r set_tab_title
 #: The hints kitten has many more modes of operation that you can map
 #: to different shortcuts. For a full description see kittens/hints.
 
-#: Toggle fullscreen
-
-map super+f toggle_fullscreen
 
 #: Toggle maximized
 
