--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,14 +18,29 @@ map cmd+[ previous_window
 map cmd+enter launch --cwd=current open --reveal .
 map ctrl+cmd+] move_tab_forward
 map ctrl+cmd+[ move_tab_backward
-map cmd+w close_window
+#map cmd+w close_window
 
 map alt+j neighboring_window down
 map alt+k neighboring_window up
 map alt+h neighboring_window left
 map alt+l neighboring_window right
 
-map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd')
+# Set a short delay for chord recognition (in milliseconds)
+kitty_mod_map_delay 250
+
+map cmd+w close_window
+# Create new window panes in different directions
+# map cmd+w>w launch --location=top
+map cmd+w>s launch --location=bottom
+map cmd+w>a launch --location=left
+map cmd+w>d launch --location=right
+map cmd+w>q close_window
+map cmd+j neighboring_window down
+map cmd+k neighboring_window up
+map cmd+h neighboring_window left
+map cmd+l neighboring_window right
+
+# map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
 
 # map cmd+j goto_tab_below
 # map cmd+k goto_tab_above
@@ -35,7 +50,8 @@ map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd')
 #: Toggle fullscreen
 map super+f toggle_fullscreen
 
-map cmd+n						new_os_window_with_cmd
+map cmd+shift+n						new_os_window_with_cmd
+map alt+n						new_os_window_with_cmd
 map cmd+t						new_tab
 map cmd+shift+t			new_tab_with_cwd
 map cmd+shift+j       new_window_with_cwd
@@ -1579,9 +1595,7 @@ macos_show_window_title_in none
 
 # map kitty_mod+f8 swap_with_window
 
-#: }}}
-
-#: Tab management \{{{
+#: Tab management
 
 #: Next tab
 
@@ -1621,7 +1635,6 @@ macos_show_window_title_in none
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
 map cmd+R set_tab_title
-
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
@@ -1888,22 +1901,18 @@ map cmd+R set_tab_title
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
 
-#: }}}
-
-#: }}}
-#
-
-map  ctrl+enter      send_text normal,application \x1b[13;5u
-map  shift+enter     send_text normal,application \x1b[13;2u
-map  ctrl+tab        send_text normal,application \x1b[9;5u
-map  ctrl+shift+tab  send_text normal,application \x1b[9;6u
-#
+# Key Passthroughs
 # use showkey on linux, or Show Key on mac to work out codes, under "key code" (unicode hex)
-#
-# cmd+s -> ctrl+s
-map cmd+s send_text all \x13
-# cmd+o -> alt+o
-map cmd+o send_text all \xf8
-map cmd+backspace send_text all \x15
 
+map		ctrl+enter      send_text normal,application \x1b[13;5u
+map		shift+enter     send_text normal,application \x1b[13;2u
+map		ctrl+tab        send_text normal,application \x1b[9;5u
+map		ctrl+shift+tab  send_text normal,application \x1b[9;6u
+# cmd+s -> ctrl+s
+map		cmd+s						send_text	all \x13
+# cmd+o -> alt+o
+map		cmd+o						send_text all \xf8
+map		cmd+backspace		send_text all \x15
+
+# Theme
 include themes/1984-dark
