--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,44 +1,62 @@
-# KITTY
+# KITTY CONFIG
 
-#
-# KEYBINDINGS
-#
-#: Tabs
-map cmd+1 goto_tab 1
-map cmd+2 goto_tab 2
-map cmd+3 goto_tab 3
-map cmd+4 goto_tab 4
-map cmd+5 goto_tab 5
-map cmd+6 goto_tab 6
-map cmd+7 goto_tab 7
-map cmd+8 goto_tab 8
-map cmd+9 goto_tab 9
-map cmd+] next_window
-map cmd+[ previous_window
-map cmd+enter launch --cwd=current open --reveal .
-map ctrl+cmd+] move_tab_forward
-map ctrl+cmd+[ move_tab_backward
-#map cmd+w close_window
+# Set mod key to cmd
+kitty_mod cmd
 
-map alt+j neighboring_window down
-map alt+k neighboring_window up
-map alt+h neighboring_window left
-map alt+l neighboring_window right
-
-# Set a short delay for chord recognition (in milliseconds)
+# Set chord recognition delay (milliseconds)
 kitty_mod_map_delay 250
 
-map cmd+w close_window
+# -----------------------------
+# KEYBINDINGS
+# -----------------------------
+
+## Tabs Management
+map kitty_mod+1 goto_tab 1
+map kitty_mod+2 goto_tab 2
+map kitty_mod+3 goto_tab 3
+map kitty_mod+4 goto_tab 4
+map kitty_mod+5 goto_tab 5
+map kitty_mod+6 goto_tab 6
+map kitty_mod+7 goto_tab 7
+map kitty_mod+8 goto_tab 8
+map kitty_mod+9 goto_tab 9
+map ctrl+cmd+] move_tab_forward
+map ctrl+cmd+[ move_tab_backward
+map shift+cmd+t new_tab_with_cwd
+map shift+cmd+w close_os_window
+
+## Window Management
+map kitty_mod+j neighboring_window down
+map kitty_mod+k neighboring_window up
+map kitty_mod+h neighboring_window left
+map kitty_mod+l neighboring_window right
+
+# Create new window panes in different directions
+map kitty_mod+w close_window
+map ctrl+w>s launch --location=bottom
+map ctrl+w>a launch --location=left
+map ctrl+w>d launch --location=right
+map ctrl+w>q close_window
+
+## Tab Navigation
+map kitty_mod+right next_tab
+map kitty_mod+left previous_tab
+map kitty_mod+] next_window
+map kitty_mod+[ previous_window
+
+map kitty_mod+w>q close_window
+map kitty_mod+enter launch --cwd=current open --reveal .
+#map cmd+w close_window
+
+
+# map kitty_mod+w close_window
 # Create new window panes in different directions
 # map cmd+w>w launch --location=top
-map cmd+w>s launch --location=bottom
-map cmd+w>a launch --location=left
-map cmd+w>d launch --location=right
-map cmd+w>q close_window
-map cmd+j neighboring_window down
-map cmd+k neighboring_window up
-map cmd+h neighboring_window left
-map cmd+l neighboring_window right
+map kitty_mod+w>s launch --location=bottom
+map kitty_mod+w>a launch --location=left
+map kitty_mod+w>d launch --location=right
+map kitty_mod+w>kitty_mod+d launch --location=right
+map kitty_mod+w>w close_window
 
 # map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
 
@@ -68,11 +86,7 @@ map cmd+shift+g			show_last_command_output
 # run: `kitty list-fonts`
 #
 font_family      JetBrains Mono Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-#
-font_size 14
+font_size        14
 # force_ltr no
 # adjust_line_height  0 # use pixels or %, can be negative
 # adjust_column_width 0
@@ -1596,18 +1610,6 @@ macos_show_window_title_in none
 # map kitty_mod+f8 swap_with_window
 
 #: Tab management
-
-#: Next tab
-
-# map kitty_mod+right next_tab
-# map shift+cmd+]     next_tab
-# map ctrl+tab        next_tab
-
-#: Previous tab
-
-# map kitty_mod+left previous_tab
-# map shift+cmd+[    previous_tab
-# map ctrl+shift+tab previous_tab
 
 #: New tab
 
