--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ map kitty_mod+left previous_tab
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 
-map kitty_mod+w>q close_window
+map kitty_mod+w close_window
 map kitty_mod+enter launch --cwd=current open --reveal .
 #map cmd+w close_window
 
@@ -52,11 +52,10 @@ map kitty_mod+enter launch --cwd=current open --reveal .
 # map kitty_mod+w close_window
 # Create new window panes in different directions
 # map cmd+w>w launch --location=top
-map kitty_mod+w>s launch --location=bottom
-map kitty_mod+w>a launch --location=left
-map kitty_mod+w>d launch --location=right
-map kitty_mod+w>kitty_mod+d launch --location=right
-map kitty_mod+w>w close_window
+map ctrl+w>s launch --location=bottom
+map ctrl+w>a launch --location=left
+map ctrl+w>d launch --location=right
+map ctrl+w>w close_window
 
 # map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
 
@@ -75,6 +74,25 @@ map cmd+shift+t			new_tab_with_cwd
 map cmd+shift+j       new_window_with_cwd
 map cmd+shift+g			show_last_command_output
 #map cmd+shift+n launch --cwd=current
+
+# Overlays
+map alt+f1 launch --title "scrollback overlay" --stdin-source=@screen_scrollback --type=overlay most -v
+map alt+f2 launch --title "pianobar overlay" --type=overlay screen -d -RR pianobar pianobar
+map alt+f3 launch --title "reddit overlay" --type=overlay screen -d -RR reddit tuir
+map alt+f4 launch --title "scratch overlay" --type=overlay screen -d -RR scratch nano /tmp/scratch
+
+map alt+f6 launch --title "cwd overlay" --type=overlay --cwd=current
+map alt+f7 launch --title "TODO overlay" --type=overlay screen -d -RR todo nano $HOME/Documents/.notes/to_do
+map kitty_mod+f8 launch --title "debug" --type=overlay cmatrix -ab -C blue -u 2
+map alt+f9 launch --title "w3m overlay" --type=overlay screen -d -RR w3m w3m -B
+map alt+f10 launch --title "htop overlay" --type=overlay screen -d -RR htop htop
+map alt+shift+f10 launch --title "btop overlay" --type=overlay screen -d -RR btop btop
+map alt+f11 launch --title "ssh:gamerboxloc overlay" --type=overlay ssh christopher@gamerboxloc
+map alt+shift+f11 launch --title "ssh:gamerboxint overlay" --type=overlay ssh christopher@gamerboxint
+map alt+f12 launch --title "customizations overlay" --type=overlay most -v $HOME/.config/kitty/personalizations-help
+
+map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -RR kitty.conf nano $HOME/.config/kitty/kitty.co>
+
 
 # focus kitty
 # map ctrl+space focus_toggle
