--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -30,6 +30,7 @@ map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
+map kitty_mod+enter       new_window_with_cwd
 
 # Create new window panes in different directions
 map kitty_mod+w close_window
@@ -38,6 +39,9 @@ map ctrl+w>a launch --location=left
 map ctrl+w>d launch --location=right
 map ctrl+w>q close_window
 
+## Tab Management
+map kitty_mod+shift+r set_tab_title
+
 ## Tab Navigation
 map kitty_mod+right next_tab
 map kitty_mod+left previous_tab
@@ -45,7 +49,8 @@ map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 
 map kitty_mod+w close_window
-map kitty_mod+enter launch --cwd=current open --reveal .
+# map kitty_mod+r launch --cwd=current open --reveal .
+map kitty_mod+r shell_command --cwd=current open --reveal .
 #map cmd+w close_window
 
 
@@ -72,6 +77,7 @@ map alt+n						new_os_window_with_cmd
 map cmd+t						new_tab
 map cmd+shift+t			new_tab_with_cwd
 map cmd+shift+j       new_window_with_cwd
+map cmd+shift+\       new_window_with_cwd
 map cmd+shift+g			show_last_command_output
 #map cmd+shift+n launch --cwd=current
 
@@ -1654,7 +1660,6 @@ macos_show_window_title_in none
 
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
-map cmd+R set_tab_title
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
