--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -24,5 +24,14 @@ Ctrl+f script_binding reveal_in_finder
 
 Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
 
+Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
+f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}"
+
+# Skip to the previous chapter
+Shift+LEFT add chapter -1
+
+# Skip to the next chapter
+Shift+RIGHT add chapter 1
+
 # Open parent dir in kitty and launch lf
 Ctrl+k script_binding open_in_kitty
