--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -206,7 +206,6 @@ font_size        14
 #: Cursor customization
 
 cursor #F0F
-
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
 #: the color of the text in the cell it is over and the text will be
@@ -913,12 +912,9 @@ background_opacity 0.95
 #: be one of tiled, mirror-tiled, scaled, clamped.
 
 # background_image_linear no
+#: When background image is scaled, whether linear interpolation should be used.
 
-#: When background image is scaled, whether linear interpolation
-#: should be used.
-
-# dynamic_background_opacity no
-
+dynamic_background_opacity yes
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
