--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,8 +1,7 @@
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
 # Shuffle the playlist when pressing R
-R playlist-shuffle
-r playlist-shuffle
+r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000
 
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
