--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -49,8 +49,8 @@ map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 
 map kitty_mod+w close_window
-# map kitty_mod+r launch --cwd=current open --reveal .
-map kitty_mod+r shell_command --cwd=current open --reveal .
+map kitty_mod+r launch --cwd=current open --reveal .
+#map kitty_mod+r shell_command --cwd=current open --reveal .
 #map cmd+w close_window
 
 
