--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,9 +1,16 @@
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
 # Shuffle the playlist when pressing R
-r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000
+# r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
+r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 
+# Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
+
+# Print Playlist
+p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
+#p playlist-show
+
 
 # Skip to the next clip with space bar
 ENTER playlist-next
@@ -24,7 +31,7 @@ Ctrl+f script_binding reveal_in_finder
 Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
 
 Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
-f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}"
+f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 500
 
 # Skip to the previous chapter
 Shift+LEFT add chapter -1
