--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -34,6 +34,8 @@ target-trc=auto
 vf=format=colorlevels=full:colormatrix=auto
 video-output-levels=full
 
+osd-font-size=16
+
 ##################
 # video settings #
 ##################
