--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1931,8 +1931,12 @@ map		ctrl+tab        send_text normal,application \x1b[9;5u
 map		ctrl+shift+tab  send_text normal,application \x1b[9;6u
 # cmd+s -> ctrl+s
 map		cmd+s						send_text	all \x13
-# cmd+o -> alt+o
-map		cmd+o						send_text all \xf8
+# # cmd+o -> alt+o
+# map		cmd+o						send_text all \xf8
+
+# cmd+o -> ctrl+o
+map		cmd+o						send_text all \x0f
+
 map		cmd+backspace		send_text all \x15
 
 # Theme
