--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,6 +11,8 @@ Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
 #p playlist-show
 
+# Interpolation toggle
+i cycle interpolation
 
 # Skip to the next clip with space bar
 ENTER playlist-next
