--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,32 +1,5 @@
-#
-# Example mpv configuration file
-#
-# Warning:
-#
-# The commented example options usually do _not_ set the default values. Call
-# mpv with --list-options to see the default values for most options. There is
-# no builtin or example mpv.conf with all the defaults.
-#
-#
-# Configuration files are read system-wide from /usr/local/etc/mpv.conf
-# and per-user from ~/.config/mpv/mpv.conf, where per-user settings override
-# system-wide settings, all of which are overridden by the command line.
-#
-# Configuration file settings and the command line options use the same
-# underlying mechanisms. Most options can be put into the configuration file
-# by dropping the preceding '--'. See the man page for a complete list of
-# options.
-#
-# Lines starting with '#' are comments and are ignored.
-#
-# See the CONFIGURATION FILES section in the man page
-# for a detailed description of the syntax.
-#
-# Profiles should be placed at the bottom of the configuration file to ensure
-# that settings wanted as defaults are not restricted to specific profiles.
-
 loop-playlist=inf
-# fullscreen
+# Fullscreen
 fs=yes
 
 hdr-compute-peak=yes
@@ -36,12 +9,50 @@ video-output-levels=full
 
 osd-font-size=16
 
-##################
-# video settings #
-##################
-
 # Enable Vapoursynth
 #vf=vapoursynth="~~/scripts/svp.vpy"
+
+# Frame interpolation
+# Reduce stuttering caused by mismatches in the video fps and display refresh rate (also known as judder).
+#
+#		 WARNING:
+#		 	 This requires setting the --video-sync option to one of the display- modes, or it will be silently disabled.  This was
+#		 	 not required before mpv 0.14.0.
+#
+# This essentially attempts to interpolate the missing frames by convoluting the video along the temporal axis. The filter
+# used can be controlled using the --tscale setting.
+interpolation=yes
+video-sync=display-resample
+tscale=oversample
+
+# Always push interpolation to 60fps
+#fps=60
+override-display-fps=60
+hwdec=auto-safe
+
+# Motion interpolation settings
+blend-subtitles=yes
+temporal-dither=yes
+
+# Profile for motion interpolation
+profile=gpu-hq
+
+# Optional: Smoothmotion settings
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
+dscale=mitchell
+scale-antiring=0.7
+cscale-antiring=0.7
+
+# Additional settings for better quality
+deband=yes
+deband-iterations=4
+deband-threshold=35
+deband-range=16
+deband-grain=5
+
+# additional smoothness
+tscale-clamp=0.75
 
 # force starting with centered window
 geometry=50%:50%
@@ -52,9 +63,15 @@ autofit-larger=90%x90%
 # Do not close the window on exit.
 #keep-open=yes
 
-# Do not wait with showing the video window until it has loaded. (This will
-# resize the window once video is loaded. Also always shows a window with
-# audio.)
+# --force-window=<yes|no|immediate>
+#  Create a video output window even if there is no video. This can be useful when pretending that mpv is a GUI application.
+#  Currently, the window always has the size 960x540, and is subject to --geometry, --autofit, and similar options.
+#
+#  WARNING:
+#  The window is created only after initialization (to make sure default window placement still works if the video size is
+#  different from the --force-window default window size). This can be a problem if initialization doesn't work perfectly,
+#  such as when opening URLs with bad network connection, or opening broken video files. The immediate mode can be used to
+#  create the window always on program start, but this may cause other issues.
 force-window=immediate
 
 # Disable the On Screen Controller (OSC).
