--- a/dotter/macos.toml.example
+++ b/dotter/macos.toml.example
@@ -1,18 +1,19 @@
 packages = [
-  "bin",
 	"starship",
+	"yazi",
+  "alacritty",
+  "bash",
+  "bin",
   "chafa",
-  "joshuto",
+  "default",
   "delta",
   "dotter",
   "gitui",
-  "alacritty",
-  "bash",
-  "default",
   "helix",
-  "mpv",
+  "joshuto",
   "kitty",
   "lf",
+  "mpv",
   "nvim",
   "skhd",
   "zellij",
