--- a/dotter/global.toml
+++ b/dotter/global.toml
@@ -19,8 +19,7 @@ depends = []
 "joshuto" = "~/.config/joshuto"
 
 [yazi]
-[yazi.files]
-"apps/yazi" = { target = "~/.config/yazi", template.false = true }
+files = { "apps/yazi" = { target = "~/.config/yazi", template = false } }
 
 [chafa.files]
 "scripts/chafa-select" = "~/.bin/chafa-select"
