--- a/apps/yazi/theme.toml
+++ b/apps/yazi/theme.toml
@@ -4,14 +4,14 @@
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
-# : Flavor {{{
+# : Flavor
 
 [flavor]
 use = "sunset"
 
-# : }}}
+# :
 
-# : Manager {{{
+# : Manager
 
 [manager]
 cwd = { fg = "cyan" }
@@ -47,10 +47,10 @@ border_style  = { fg = "gray" }
 # Highlighting
 syntect_theme = ""
 
-# : }}}
+# :
 
 
-# : Status {{{
+# : Status
 
 [status]
 separator_open  = ""
@@ -74,20 +74,20 @@ permissions_w = { fg = "red" }
 permissions_x = { fg = "cyan" }
 permissions_s = { fg = "darkgray" }
 
-# : }}}
+# :
 
 
-# : Select {{{
+# : Select
 
 [select]
 border   = { fg = "blue" }
 active   = { fg = "magenta", bold = true }
 inactive = {}
 
-# : }}}
+# :
 
 
-# : Input {{{
+# : Input
 
 [input]
 border   = { fg = "blue" }
@@ -95,10 +95,10 @@ title    = {}
 value    = {}
 selected = { reversed = true }
 
-# : }}}
+# :
 
 
-# : Completion {{{
+# : Completion
 
 [completion]
 border   = { fg = "blue" }
@@ -110,20 +110,20 @@ icon_file    = ""
 icon_folder  = ""
 icon_command = ""
 
-# : }}}
+# :
 
 
-# : Tasks {{{
+# : Tasks
 
 [tasks]
 border  = { fg = "blue" }
 title   = {}
 hovered = { fg = "magenta", underline = true }
 
-# : }}}
+# :
 
 
-# : Which {{{
+# : Which
 
 [which]
 cols            = 3
@@ -134,10 +134,10 @@ desc            = { fg = "lightmagenta" }
 separator       = "  "
 separator_style = { fg = "darkgray" }
 
-# : }}}
+# :
 
 
-# : Help {{{
+# : Help
 
 [help]
 on      = { fg = "cyan" }
@@ -146,10 +146,10 @@ desc    = {}
 hovered = { reversed = true, bold = true }
 footer  = { fg = "black", bg = "white" }
 
-# : }}}
+# :
 
 
-# : Notify {{{
+# : Notify
 
 [notify]
 title_info  = { fg = "green" }
@@ -161,10 +161,10 @@ icon_info  = ""
 icon_warn  = ""
 icon_error = ""
 
-# : }}}
+# :
 
 
-# : File-specific styles {{{
+# : File-specific styles
 
 [filetype]
 
@@ -783,4 +783,4 @@ conds = [
 	{ if = "!dir", text = "󰈔" },
 ]
 
-# : }}}
+# :
