--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -12,17 +12,18 @@ p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
 #p playlist-show
 
 # Interpolation toggle
-i cycle interpolation
+# i cycle interpolation
+# V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
+/ show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}\n${video-bitrate:}" 5000 1
 
 # Skip to the next clip with space bar
-ENTER playlist-next
 
-# Skip to the next clip with right arrow key
-Shift+RIGHT playlist-next
+# Skip to the next clip
+ENTER playlist-next
 Meta+RIGHT playlist-next
 
-# Skip to the previous clip with left arrow key
-Shift+LEFT playlist-prev
+# Skip to the previous clip
+Shift+ENTER playlist-prev
 Meta+LEFT playlist-prev
 
 # Reveal the currently playing file in finder
