--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -8,6 +8,14 @@ vf=format=colorlevels=full:colormatrix=auto
 video-output-levels=full
 
 osd-font-size=16
+osd-status-msg="${filename}"
+osd-level=1
+osd-alignment=1
+osd-margin-x=10
+osd-margin-y=10
+osd-font-size=30
+osd-playing-msg="${filename}"
+osd-duration=infinity
 
 # Enable Vapoursynth
 #vf=vapoursynth="~~/scripts/svp.vpy"
