--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -4,6 +4,13 @@
 # r script-message-to playlistmanager shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 
+#Meta+d show-text "${path}"
+#Meta+d show-text "path=${path}\nfilename=${filename}"
+#Meta+d show-text "${directory}"
+#Meta+d playlist-clear; loadfile "%f" replace; loadfile "%f" append-play
+Meta+d script-binding replace-playlist
+Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
+
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
